--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -18,6 +18,10 @@
         height: 100px;
         background: linear-gradient(122.91deg, rgba(28, 27, 25, 0.35) 0%, rgba(79, 79, 79, 0.12) 63.736%, rgba(79, 79, 79, 0.35) 101.168%);
         clip-path: polygon(0 0, 80% 0, 100% 100%, 0% 100%);
+
+        @include mobile {
+            width: 70%;
+        }
     }
 
     &__shape-2 {
@@ -28,6 +32,10 @@
         height: 22px;
         background: linear-gradient(156.23deg, rgba(135, 61, 37, 0.35) -0.348%, rgba(255, 108, 61, 0.35) 100%);
         clip-path: polygon(0 0, 0 0, 100% 100%, 0% 100%);
+
+        @include mobile {
+            width: 70%;
+        }
     }
 
     &__shape-3 {
@@ -38,6 +46,10 @@
         height: 22px;
         background: linear-gradient(157.72deg, rgba(135, 61, 37, 0.11) -0.323%, rgba(255, 108, 61, 0.11) 92.563%);
         clip-path: polygon(0 0, 100% 0, 0 100%, 0% 100%);
+
+        @include mobile {
+            width: 70%;
+        }
     }
 
     /* right */
@@ -50,6 +62,10 @@
         height: 100px;
         background: linear-gradient(-122.91deg, rgba(28, 27, 25, 0.35) 0%, rgba(79, 79, 79, 0.12) 63.735%, rgba(79, 79, 79, 0.35) 101.167%);
         clip-path: polygon(20% 0, 100% 0%, 100% 100%, 0% 100%);
+
+        @include mobile {
+            display: none;
+        }
     }
 
     &__shape-5 {
@@ -60,6 +76,10 @@
         height: 22px;
         background: linear-gradient(156.23deg, rgba(135, 61, 37, 0.35) -0.348%, rgba(255, 108, 61, 0.35) 100%);
         clip-path: polygon(100% 0, 100% 100%, 0 100%, 0% 100%);
+
+        @include mobile {
+            display: none;
+        }
     }
 
     &__shape-6 {
@@ -70,6 +90,10 @@
         height: 22px;
         background: linear-gradient(157.72deg, rgba(135, 61, 37, 0.11) -0.323%, rgba(255, 108, 61, 0.11) 92.563%);
         clip-path: polygon(100% 0, 100% 100%, 0 0, 0 0);
+
+        @include mobile {
+            display: none;
+        }
     }
 
     &__circle-1 {
@@ -81,6 +105,10 @@
         filter: blur(500px);
         background: linear-gradient(156.23deg, rgba(135, 61, 37, 0.45) -88.391%, rgba(255, 108, 61, 0.45) 99.995%);
         border-radius: 50%;
+
+        @include mobile {
+            display: none;
+        }
     }
 
     &__circle-2 {
@@ -92,6 +120,10 @@
         filter: blur(500px);
         background: linear-gradient(156.23deg, rgba(135, 61, 37, 0.45) -88.391%, rgba(255, 108, 61, 0.45) 99.995%);
         border-radius: 50%;
+
+        @include mobile {
+            display: none;
+        }
     }
 
     &__block {
