--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -23,10 +23,10 @@
             </div>
             <div class="header__menu js-hamburger-menu">
                 <div class="header__menu_block">
-                    <a href="#" class="header__menu_item">Активация</a>
-                    <a href="#" class="header__menu_item">VPN</a>
-                    <a href="#" class="header__menu_item">Ошибки & Решения</a>
-                    <a href="#" class="header__menu_item">Заказ игры</a>
+                    <a href="#" class="header__menu_item active">Главная</a>
+                    <a href="#" class="header__menu_item">Каталог</a>
+                    <a href="#" class="header__menu_item">Информация</a>
+                    <a href="#" class="header__menu_item">Карта лояльности</a>
                 </div>
             </div>
             <div class="header__lang">
