--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -6,6 +6,10 @@
     padding: 0 20px;
 }
 
+.hide {
+    display: none;
+}
+
 
 .list-item {
     display: flex;
@@ -228,4 +232,231 @@
         }
     }
 
+}
+
+.game-card {
+    width: 100%;
+    max-width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__img {
+        width: 100%;
+        height: 320px;
+        object-fit: cover;
+        border-bottom: 1px solid rgb(132, 127, 125);
+        border-radius: 10px;
+    }
+
+    &__content {
+        position: absolute;
+        bottom: 80px;
+        left: 50%;
+        width: calc(100% - 28px);
+        padding: 12px 8px;
+        transform: translateX(-50%);
+        border-radius: 4px;
+        backdrop-filter: blur(11.4px);
+        background: linear-gradient(180.00deg, rgba(44, 44, 44, 0.62), rgba(0, 0, 0, 0.36) 100%);
+
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    &__title {
+        width: calc(100% - 20px);
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.2;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        height: 39px;
+    }
+
+    &__subtitle {
+        font-size: 10px;
+        width: calc(100% - 40px);
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        height: max-content;
+    }
+
+    &__label {
+        width: 13px;
+        height: 13px;
+        display: flex;
+        position: absolute;
+        right: 8px;
+        top: 8px;
+    }
+
+    &__discount {
+        position: absolute;
+        bottom: 13px;
+        right: 0;
+        font-size: 12px;
+        font-weight: 700;
+        padding: 2px 4px;
+        border-radius: 6px 0px 0px 6px;
+        background: rgb(113, 118, 255);
+    }
+
+    &__price {
+        font-size: 24px;
+        font-weight: 700;
+
+        &_cur {
+            font-size: 13px;
+            color: #83AC74;
+            font-weight: 500;
+            position: relative;
+            top: -15px;
+            margin-left: 2px;
+        }
+
+        &_old {
+            text-decoration-line: line-through;
+            font-size: 16px;
+            font-style: italic;
+            margin-left: 8px;
+            margin-bottom: 2px;
+            color: $text-dark;
+        }
+    }
+
+    &__btn {
+        width: 45%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        bottom: 23px;
+        transform: skew(-15deg);
+        border: 1px solid rgb(132, 127, 125);
+        border-radius: 4px;
+        background: rgb(31, 28, 26);
+        padding: 0.5em 1.5em;
+        color: white;
+
+        &_block {
+            transform: skew(15deg);
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            line-height: 1;
+        }
+
+        &:hover {
+            background: black;
+        }
+    }
+}
+
+.statics-card {
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    height: 124px;
+    border-radius: 10px;
+    border: 1px solid #33302D;
+
+    &__img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: brightness(0.5);
+        background: linear-gradient(175.53deg, rgba(52, 45, 39, 0.35), rgba(34, 34, 32, 0.35) 67.445%);
+    }
+
+    &__content {
+        width: 100%;
+        position: relative;
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0;
+        padding: 30px;
+        background: linear-gradient(175.53deg, rgba(52, 45, 39, 0.35), rgba(34, 34, 32, 0.35) 67.445%);
+    }
+
+    &__number {
+        font-size: 48px;
+        font-weight: 700;
+        line-height: 1;
+        font-family: $font-rubik;
+        color: rgb(132, 127, 125);
+
+        &::after {
+            content: "";
+            display: flex;
+            width: 60px;
+            height: 60px;
+            position: absolute;
+            left: 50%;
+            top: -40px;
+            transform: translateX(-50%);
+            filter: blur(50px);
+            background: rgb(255, 108, 61);
+            border-radius: 50%;
+        }
+
+        &::before {
+            content: "";
+            display: flex;
+            width: 60px;
+            height: 60px;
+            position: absolute;
+            left: 15%;
+            top: -10px;
+            filter: blur(40px);
+            background: rgba(255, 108, 61, 0.25);
+            border-radius: 50%;
+        }
+    }
+
+    &__text {
+        font-family: $font-rubik;
+        font-size: 16px;
+        font-weight: 300;
+        color: rgb(255, 108, 61);
+        position: relative;
+
+        &::after {
+            content: "";
+            display: flex;
+            width: 60px;
+            height: 60px;
+            position: absolute;
+            left: 50%;
+            bottom: -40px;
+            transform: translateX(-50%);
+            filter: blur(50px);
+            background: rgb(255, 108, 61);
+            border-radius: 50%;
+        }
+
+        &::before {
+            content: "";
+            display: flex;
+            width: 60px;
+            height: 60px;
+            position: absolute;
+            right: 15%;
+            top: -10px;
+            filter: blur(40px);
+            background: rgba(255, 108, 61, 0.25);
+            border-radius: 50%;
+        }
+    }
 }
