--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -618,8 +618,12 @@
 
 .pre-order {
     padding-top: 40px;
-    padding-bottom: 120px;
-    border-bottom: 1px solid #121110;
+    padding-bottom: 40px;
+
+    &._vpn {
+        padding-bottom: 120px;
+        border-bottom: 1px solid #121110;
+    }
 
     &__block {
         display: flex;
@@ -714,7 +718,7 @@
     &__card {
         border-radius: 20px;
         background: linear-gradient(91deg, rgba(51, 50, 49, 0.35) 0%, rgba(79, 79, 79, 0.17) 63.74%, rgba(79, 79, 79, 0.35) 101.17%);
-        padding: 40px;
+        padding: 30px 40px;
         height: 100%;
 
         @include mobile {
