--- a/src/assets/scss/pages/_main.scss
+++ b/src/assets/scss/pages/_main.scss
@@ -1,7 +1,7 @@
 .home-slider {
     margin-top: 40px;
     padding-top: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 20px;
     background: rgb(28, 27, 25);
 
     &__tabs {
@@ -60,17 +60,114 @@
 
     &__block {
         margin-top: 35px;
+        display: flex;
+        gap: 18px;
+    }
+
+    &__info {
+        width: 100%;
+        max-width: 510px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    &__card {
+        display: flex;
+        gap: 20px;
+        box-sizing: border-box;
+        border: 1px solid rgb(46, 44, 41);
+        height: 110px;
+        overflow: hidden;
+        padding: 1px;
+
+
+
+        &_img {
+            width: 100%;
+            max-width: 192px;
+            overflow: hidden;
+
+            &_item {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+
+        &_content {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+            gap: 7px;
+            padding: 5px 5px 5px 0px;
+        }
+
+        &_subtitle {
+            font-size: 14px;
+            color: $text-dark;
+            line-height: 1;
+            display: -webkit-box;
+            -webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        &_title {
+            font-size: 24px;
+            font-weight: 700;
+            line-height: 1.1;
+
+            color: white;
+
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+
+            &:hover {
+                color: $orange;
+            }
+        }
+
+        &_btn {}
+
+        &._selected {
+            box-sizing: border-box;
+            border: 1px solid rgb(61, 162, 255);
+        }
+
+        &._bordered-start {
+            border-radius: 13px 13px 0 0;
+
+            .home-slider__card_img {
+                border-radius: 13px 0 0 0;
+            }
+        }
+
+        &._bordered-end {
+            border-radius: 0 0 13px 13px;
+
+            .home-slider__card_img {
+                border-radius: 0 0 0 13px;
+            }
+        }
+
     }
 }
 
 /* Home Swiper */
 .home-swiper {
-
     &-container {
         position: relative;
         display: flex;
         justify-content: space-between;
         overflow: hidden;
+        width: 100%;
         height: 456px;
     }
 
@@ -194,29 +291,239 @@
 
 
     }
+}
 
-    &-thumbs {
-        order: 1;
+
+/* Game Slider */
+.game-slider {
+    padding-top: 30px;
+    padding-bottom: 30px;
+
+    &__block {
         width: 100%;
-        height: 456px;
-        max-width: 511px;
+    }
 
-        .swiper-slide {
-            height: 111px;
+    &__actions {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 30px;
+        margin-bottom: 30px;
+    }
 
-            img {
-                height: 100%;
-                object-fit: cover;
-                transition: 0.3s;
-            }
+    &__arrows {
+        position: relative;
+        display: flex;
+        align-items: center;
+        gap: 10px;
 
-            &-active {
-                opacity: 0.9;
-            }
+        .swiper-button-next,
+        .swiper-button-prev {
+            position: initial;
+            color: $text-dark;
+            border: 1px solid;
+            border-radius: 4px;
+            width: 50px;
+            height: 36px;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: 300ms ease;
 
-            &-thumb-active {
-                opacity: 1;
+            &:hover {
+                color: white;
             }
         }
+
+        .swiper-button-next:after,
+        .swiper-button-prev:after {
+            font-size: 30px;
+            position: relative;
+            top: -2px;
+        }
+
+        .swiper-button-next:after,
+        .swiper-rtl .swiper-button-prev:after {
+            content: "\2192";
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+        .swiper-button-prev:after,
+        .swiper-rtl .swiper-button-next:after {
+            content: "\2190";
+            font-family: 'Courier New', Courier, monospace;
+        }
     }
+}
+
+/* home-statics */
+.home-statics {
+    margin-top: 40px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background: rgb(26, 25, 23);
+
+    &__title {
+        text-align: center;
+        font-size: 20px;
+        font-weight: 500;
+        margin-bottom: 50px;
+        color: $text-dark;
+    }
+
+    .swiper-slide-active {
+        z-index: 2;
+
+        .statics-card {
+            background: linear-gradient(175.53deg,
+                    rgb(52, 45, 39) 0%,
+                    rgb(34, 34, 32) 67.445%) padding-box,
+                linear-gradient(to top, #61492E 14%, #FF6C3D) border-box;
+            border: 1px solid transparent;
+            transform: scale(1.28);
+        }
+
+        .statics-card__number,
+        .statics-card__text {
+            color: white;
+        }
+    }
+
+    .swiper {
+        overflow: visible;
+    }
+}
+
+.home-markets {
+    margin-top: 40px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background: rgb(26, 25, 23);
+    position: relative;
+    overflow: hidden;
+
+    &::after {
+        content: "";
+        display: flex;
+        width: 250px;
+        height: 60px;
+        position: absolute;
+        left: 50%;
+        bottom: -40px;
+        transform: translateX(-50%);
+        filter: blur(70px);
+        background: rgb(255, 108, 61);
+        border-radius: 50%;
+    }
+
+
+    &__title {
+        text-align: center;
+        font-size: 20px;
+        font-weight: 500;
+        margin-bottom: 40px;
+        color: $text-dark;
+    }
+
+    &__slide {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+        width: auto;
+    }
+
+    &__img {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 52px;
+
+        &_item {
+            height: 52px;
+            filter: grayscale(1) brightness(0.5);
+        }
+    }
+
+    &__link {
+        display: none;
+    }
+
+    .swiper-slide-active {
+        .home-markets__link {
+            display: flex;
+        }
+
+        .home-markets__img_item {
+            filter: none;
+        }
+    }
+
+    .swiper {
+        overflow: visible;
+    }
+}
+
+.pre-order-actions {
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+    padding: 25px;
+
+    &__img {
+        width: 60%;
+        border-radius: 15px;
+    }
+
+    &__content {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    &__title {
+        font-weight: 700;
+        font-size: 20px;
+    }
+
+    &__subtitle {
+        color: $orange;
+    }
+
+    &__list {
+        color: $text-dark;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    &__item {
+        display: flex;
+        align-items: center;
+        gap: 16px;
+
+        &_num {
+            border: 1px solid $text-dark;
+            width: 18px;
+            height: 18px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 12px;
+            color: white;
+            border-radius: 2px;
+        }
+
+        &_text {}
+
+        a {
+            color: #83A5FF;
+            border-bottom: 1px dashed;
+        }
+    }
+
 }
