--- a/src/assets/scss/pages/_main.scss
+++ b/src/assets/scss/pages/_main.scss
@@ -527,3 +527,259 @@
     }
 
 }
+
+.home-blog {
+    background: rgb(26, 25, 23);
+    padding-top: 40px;
+    padding-bottom: 40px;
+
+    &__block {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 30px;
+
+        margin-bottom: 30px;
+    }
+
+    &__title {
+        font-family: $font-roboto;
+
+        &_main {
+            font-size: 20px;
+            font-weight: 700;
+
+            & ._orange {
+                color: $orange;
+            }
+        }
+
+        &_secondary {
+            font-size: 14px;
+            font-weight: 400;
+        }
+    }
+
+    &__btn {}
+
+    .swiper {
+        overflow: visible;
+    }
+
+}
+
+.home-blog-card {
+    border: 1px solid #33302D;
+    position: relative;
+    overflow: hidden;
+    border-radius: 20px;
+    box-shadow: 0px 4px 70.6px 0px rgba(0, 0, 0, 0.25);
+
+    &__block {
+        padding: 12px;
+        position: relative;
+        display: flex;
+        gap: 12px;
+    }
+
+    &__img {
+        height: 320px;
+        border-radius: 15px;
+
+        &_bg {
+            position: absolute;
+            height: 100%;
+            left: 0;
+            top: 0;
+            object-fit: cover;
+            filter: contrast(1) opacity(0.1) brightness(0.3) grayscale(1);
+        }
+    }
+
+    &__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 13px;
+        color: $text-dark;
+        padding-right: 20px;
+    }
+
+    &__date {
+        font-size: 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 20px;
+
+        &_label {
+            color: $text-white;
+        }
+    }
+
+    &__title {
+        color: $text-white;
+        font-size: 24px;
+        line-height: 1.2;
+    }
+
+    &__text {
+        font-size: 15px;
+        display: -webkit-box;
+        -webkit-line-clamp: 6;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    &__action {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 20px;
+    }
+
+    &__link {
+        color: $orange;
+        font-size: 15px;
+        font-weight: 400;
+    }
+
+    &__timer {
+        display: flex;
+        align-items: center;
+        font-size: 10px;
+        gap: 6px;
+
+        &_icon {
+            width: 12px;
+            height: 12px;
+        }
+    }
+}
+
+.home-reviews {
+    padding-top: 40px;
+    padding-bottom: 40px;
+
+    &__title {
+        text-align: center;
+        font-size: 20px;
+        color: $text-dark;
+        margin-bottom: 25px;
+
+        &._secondary {
+            margin-top: 80px;
+        }
+    }
+
+    &__slide {
+        width: 100%;
+        max-width: 294px;
+    }
+
+    .swiper {
+        overflow: visible;
+    }
+}
+
+.home-reviews-card {
+    display: flex;
+    gap: 14px;
+
+    &__name {
+        width: 100%;
+        max-width: 58px;
+        height: 76px;
+        border-radius: 5px;
+        border: 1px solid $text-dark;
+        font-size: 20px;
+        font-weight: 700;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: $font-roboto;
+    }
+
+    &__content {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+    }
+
+    &__title {
+        font-size: 14px;
+        font-weight: 700;
+        color: white;
+    }
+
+    &__date {
+        color: $text-dark;
+        font-size: 14px;
+        display: flex;
+        align-items: center;
+        gap: 4px;
+        margin-bottom: 8px;
+
+        &_label {
+            display: flex;
+            width: 27px;
+            height: 11px;
+            border-radius: 25px;
+
+            &._green {
+                background-color: #62CC66;
+            }
+        }
+    }
+
+    &__text {
+        color: $text-dark;
+        font-size: 14px;
+    }
+
+    .read-smore__link {
+        color: $orange;
+        font-size: 14px;
+    }
+}
+
+.home-other-reviews {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+
+    &__card {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 25px;
+        border-radius: 12.58px;
+        background: linear-gradient(175.53deg, rgb(52, 45, 39) 0%, rgb(34, 34, 32) 65.877%);
+        padding: 15px 20px;
+
+        &_img {
+            width: 50px;
+            height: 50px;
+            object-fit: contain;
+        }
+
+        &_content {
+            display: flex;
+            flex-direction: column;
+            line-height: 1;
+            gap: 4px;
+        }
+
+        &_title {
+            font-size: 20px;
+            color: white;
+        }
+
+        &_subtitle {
+            font-size: 16px;
+            color: $text-dark;
+        }
+    }
+}
