--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -2,6 +2,7 @@
 $text-dark: #847F7D;
 $text-white: #FFFEFC;
 $orange: #FF6C3D;
+$purple: #7A87FF;
 $dark: #1C1B19;
 
 $font-inter: 'Inter', sans-serif;
