--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -504,3 +504,59 @@
         }
     }
 }
+
+.catalog {
+    &__tabs {
+        width: 100%;
+        border-radius: 10px;
+        background: #2C2723;
+        background: linear-gradient(268.85deg, rgba(79, 79, 79, 0.35) 0.003%, rgba(72, 60, 54, 0.35) 31.276%, rgba(70, 66, 63, 0.35) 48.784%, rgba(72, 60, 54, 0.35) 70.713%, rgba(79, 79, 79, 0.35) 99.998%);
+        display: flex;
+        justify-content: space-between;
+        overflow: hidden;
+    }
+
+    &__tab {
+        width: 100%;
+        border-bottom: 1px solid transparent;
+        transition: 300ms ease;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &_block {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            color: #847F7D;
+            padding: 10px 30px;
+            gap: 4px;
+
+            &:hover {
+                filter: brightness(230%);
+            }
+        }
+
+        &_img {
+            height: 30px;
+            object-fit: contain;
+        }
+
+        &_title {
+            font-size: 14px;
+        }
+
+        &:hover,
+        &.active {
+            border-bottom: 1px solid $orange;
+            background: linear-gradient(268.85deg, rgba(79, 79, 79, 0.35) 0.269%, rgba(72, 60, 54, 0.35) 31.412%, rgba(70, 66, 63, 0.35) 48.847%, rgba(72, 60, 54, 0.35) 70.685%, rgba(79, 79, 79, 0.35) 99.848%);
+        }
+
+        &.active .catalog__tab_block {
+            filter: brightness(230%);
+        }
+
+    }
+}
