--- a/src/assets/scss/pages/_catalog.scss
+++ b/src/assets/scss/pages/_catalog.scss
@@ -1,7 +1,7 @@
 .catalog-slider {
     margin-top: 40px;
     padding-top: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 40px;
 
     &__title {
         display: flex;
@@ -111,7 +111,7 @@
         .swiper-pagination {
             width: 100%;
             bottom: 0px;
-            height: 30px;
+            height: 20px;
             padding-left: 61px;
             position: relative;
 
@@ -133,7 +133,7 @@
         &_cards {
             display: grid;
             gap: 20px;
-            height: 100%;
+            height: 452px;
             grid-template-columns: 1fr;
             grid-template-rows: 1fr 1fr;
         }
@@ -150,7 +150,7 @@
             width: 100%;
 
             .swiper {
-                height: 463px;
+                height: 452px;
             }
 
 
@@ -165,7 +165,35 @@
 
         &_swiper {}
 
-        &_actions {}
+        &_actions {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            position: relative;
+            width: 33px;
+
+            &::before {
+                content: "";
+                width: 1px;
+                height: 80px;
+                background-color: $orange;
+                position: absolute;
+                top: 18%;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+            &::after {
+                content: "";
+                width: 1px;
+                height: 80px;
+                background-color: $orange;
+                position: absolute;
+                bottom: 18%;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+        }
 
         &_link {
             display: flex;
@@ -176,5 +204,54 @@
         &_img {
             object-fit: cover;
         }
+
+        .swiper-horizontal>.swiper-pagination-bullets,
+        .swiper-pagination-bullets.swiper-pagination-horizontal,
+        .swiper-pagination-custom,
+        .swiper-pagination-fraction {
+            top: 50%;
+            transform: translateY(-50%) rotate(90deg);
+            bottom: inherit;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            width: auto;
+            font-size: 14px;
+            font-weight: 400;
+            color: $text-dark;
+        }
+
+        .swiper-pagination-current {
+            color: white;
+        }
+
+        .swiper-button-next,
+        .swiper-button-prev {
+            width: 33px;
+            height: 55px;
+            border: 1px solid $orange;
+            border-radius: 25px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .swiper-arrow__left,
+        .swiper-arrow__right {
+            transform-origin: center;
+            position: static;
+        }
+
+        .swiper-arrow__left {
+            transform: rotate(-90deg);
+        }
+
+        .swiper-arrow__right {
+            transform: rotate(90deg);
+        }
     }
+}
+
+.catalog-list {
+    padding-bottom: 100px;
 }
