--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -10,7 +10,6 @@
     display: none;
 }
 
-
 .list-item {
     display: flex;
     align-items: flex-start;
@@ -334,7 +333,7 @@
     }
 
     &__btn {
-        width: 45%;
+        min-width: 50%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -344,7 +343,7 @@
         border: 1px solid rgb(132, 127, 125);
         border-radius: 4px;
         background: rgb(31, 28, 26);
-        padding: 0.5em 1.5em;
+        padding: 0.5rem 1rem;
         color: white;
 
         &_block {
@@ -558,5 +557,148 @@
             filter: brightness(230%);
         }
 
+    }
+}
+
+.search-block {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+    &__icon {
+        width: 14px;
+    }
+
+    &__input {
+        border: none;
+        border-bottom: 1px dashed $text-dark;
+        border-radius: inherit;
+        padding: 5px 0;
+        line-height: 1;
+
+        &::placeholder {
+            font-size: 12px;
+        }
+
+        &:focus {
+            border: none;
+            border-bottom: 1px dashed white;
+        }
+    }
+}
+
+.arrow-divide {
+    border-bottom: 1px solid #272624;
+    position: relative;
+
+    &::after {
+        content: "";
+        position: absolute;
+        bottom: 1px;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background: #121110;
+    }
+}
+
+.custom-select {
+    position: relative;
+    width: 100%;
+
+    select {
+        display: none;
+    }
+
+    .select-selected {
+        border-radius: 4px;
+        border: 1px solid $text-dark;
+    }
+
+    .select-selected:after {
+        position: absolute;
+        content: "";
+        background: url(../images/icons/arrow-down.svg);
+        background-repeat: no-repeat;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 9px;
+        width: 12px;
+        height: 7px;
+        transform-origin: center;
+    }
+
+    .select-selected.select-arrow-active:after {
+        transform: translateY(-50%) rotate(180deg);
+    }
+
+    .select-items div,
+    .select-selected {
+        color: $text-dark;
+        padding: 6px 12px;
+        font-size: 12px;
+        cursor: pointer;
+        user-select: none;
+    }
+
+    .select-items {
+        position: absolute;
+        background-color: darken($color: $text-dark, $amount: 30);
+        top: 100%;
+        left: 0;
+        right: 0;
+        z-index: 999;
+        border-radius: 0 0 5px 5px;
+        border: 1px solid darken($color: $text-dark, $amount: 30);
+        overflow: hidden;
+    }
+
+    .select-hide {
+        display: none;
+    }
+
+    .select-items div:hover,
+    .same-as-selected {
+        background-color: darken($color: $text-dark, $amount: 40);
+    }
+
+    &-unique {
+        .select-selected {
+            border-radius: 4px;
+            border: none;
+            background: linear-gradient(270deg, rgba(79, 79, 79, 0.35) 0%, rgba(72, 60, 54, 0.35) 31.28%, rgba(70, 66, 63, 0.35) 48.78%, rgba(72, 60, 54, 0.35) 70.71%, rgba(79, 79, 79, 0.35) 100%);
+        }
+    }
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+
+    &-list {
+        display: flex;
+        gap: 25px;
+        align-items: center;
+    }
+
+    &-item {
+        &:first-child {
+            margin-right: 10px;
+        }
+
+        &:last-child {
+            margin-left: 10px;
+        }
+    }
+
+    &-link {
+        font-size: 24px;
+        color: $text-dark;
+
+        &._active {
+            color: $orange;
+            text-align: center;
+            text-shadow: 0px 4px 21px $orange;
+        }
     }
 }
