--- a/src/assets/scss/_template.scss
+++ b/src/assets/scss/_template.scss
@@ -82,7 +82,7 @@ textarea {
 
     &:focus {
         outline: none;
-        border: 1px solid $text-white;
+        border: 1px solid $orange;
     }
 }
 
@@ -96,6 +96,138 @@ button {
         outline: none;
         border: none;
     }
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+
+@supports(-webkit-appearance: none) or (-moz-appearance: none) {
+
+    input.input-radio {
+        --active-inner: #FF6C3D;
+        --border: #847F7D;
+        --border-hover: #FF6C3D;
+        --background: #847F7D;
+        --disabled: #F6F8FF;
+        --disabled-inner: #E1E6F9;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        height: 20px;
+        outline: none;
+        display: inline-block;
+        vertical-align: top;
+        position: relative;
+        margin: 0;
+        cursor: pointer;
+        color: $text-dark;
+        border: 1px solid #847F7D;
+        background: #4F4F4F50;
+        transition: background .3s, border-color .3s, box-shadow .2s;
+
+        &~span {
+            color: $text-dark;
+            transition: 300ms ease;
+            font-size: 14px;
+            font-family: $font-inter;
+        }
+
+        &:after {
+            content: '';
+            display: block;
+            left: 0;
+            top: 0;
+            position: absolute;
+            transform: scale(0.8);
+            transition: transform var(--d-t, .3s) var(--d-t-e, ease), opacity var(--d-o, .2s);
+        }
+
+        &:checked {
+            background-color: transparent;
+            box-shadow: 0 0 20px -3px $orange;
+
+            &~span {
+                color: white;
+            }
+        }
+
+        &:focus {
+            box-shadow: 0 0 20px -3px $orange;
+        }
+
+        &:not(.switch) {
+            width: 20px;
+
+            &:after {
+                opacity: var(--o, 0);
+            }
+
+            &:checked {
+                --o: 1;
+            }
+        }
+
+        &:disabled {
+            --b: var(--disabled);
+            cursor: not-allowed;
+            opacity: .9;
+
+            &:checked {
+                --b: var(--disabled-inner);
+                --bc: var(--border);
+            }
+
+            &+label {
+                cursor: not-allowed;
+            }
+        }
+
+        &:hover {
+            &:not(:checked) {
+                &:not(:disabled) {
+                    --bc: var(--border-hover);
+                }
+            }
+        }
+
+
+    }
+
+    input.input-radio {
+        border-radius: 50%;
+
+        &:after {
+            width: 18px;
+            height: 18px;
+            border-radius: 50%;
+            background: var(--active-inner);
+            opacity: 0;
+            transform: scale(0.8);
+        }
+
+        &:checked {
+            --s: .5;
+        }
+    }
+
+}
+
+.input-label {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    gap: 3px;
+    cursor: pointer;
 }
 
 .btn {
