--- a/src/assets/scss/pages/_catalog.scss
+++ b/src/assets/scss/pages/_catalog.scss
@@ -1,7 +1,7 @@
 .catalog-slider {
-    margin-top: 40px;
+    margin-top: 45px;
     padding-top: 100px;
-    padding-bottom: 40px;
+    padding-bottom: 45px;
 
     &__title {
         display: flex;
@@ -253,5 +253,147 @@
 }
 
 .catalog-list {
-    padding-bottom: 100px;
+    padding-bottom: 45px;
+}
+
+.catalog-filter {
+
+    &__info {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        gap: 20px;
+        padding-bottom: 25px;
+
+        &_title {
+            display: flex;
+            gap: 10px;
+            align-items: center;
+            color: $text-dark;
+            grid-column-start: 1;
+            grid-column-end: 2;
+
+            &_name {}
+
+            &_arrow {
+                width: 12px;
+                display: flex;
+
+                img {
+                    filter: invert(48%) sepia(97%) saturate(1261%) hue-rotate(334deg) brightness(100%) contrast(102%);
+                }
+            }
+
+            &_active {}
+        }
+
+        &_search {
+            grid-column-start: 2;
+            grid-column-end: 4;
+        }
+
+        &_sort {
+            grid-column-start: 4;
+            grid-column-end: 7;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 10px;
+        }
+
+        &_choose {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        &_select {
+            width: 100%;
+            max-width: 186px;
+        }
+    }
+
+    &__values {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        gap: 20px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+
+    &__value {
+        &_title {
+            font-size: 10px;
+            font-family: $font-inter;
+            color: $text-dark;
+            margin-bottom: 6px;
+        }
+
+        &_block {
+            display: flex;
+            justify-content: space-between;
+            gap: 10px;
+        }
+
+        &_item {
+            width: 100%;
+
+            input {
+                border-radius: 4px;
+                padding: 7px 10px;
+                font-size: 10px;
+            }
+        }
+    }
+}
+
+.catalog-cards {
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+    &__block {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        gap: 20px;
+    }
+
+    &__item {
+        .game-card__content {
+            width: calc(100% - 10px);
+        }
+
+        .game-card__img {
+            height: 305px;
+        }
+
+        .game-card__btn {
+            padding: 8px 20px;
+        }
+
+        .game-card__price {
+            font-size: 16px;
+        }
+
+        .game-card__price_old {
+            font-size: 10px;
+        }
+
+        .game-card__price_cur {
+            top: -6px;
+        }
+    }
+
+    &__more {
+        margin-top: 20px;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    &__pagination {
+        margin-top: 0px;
+        margin-bottom: 40px;
+    }
+}
+
+.catalog-preorder {
+    padding-bottom: 60px;
 }
