--- a/src/assets/scss/pages/_main.scss
+++ b/src/assets/scss/pages/_main.scss
@@ -273,6 +273,10 @@
             font-family: 'Courier New', Courier, monospace;
         }
     }
+
+    &__title {
+        font-size: 14px;
+    }
 }
 
 .home-statics {
