--- a/src/assets/scss/pages/_cart.scss
+++ b/src/assets/scss/pages/_cart.scss
@@ -233,20 +233,6 @@
                 margin-bottom: 10px;
             }
 
-            &_btn {
-                font-size: 8.95px;
-                color: white;
-                padding: 10px 20px;
-                border-radius: 3px;
-                border: 1px solid #33302D;
-                background: linear-gradient(142deg, #342D27 0%, #222220 67.95%);
-
-                &:hover,
-                &._active {
-                    border: 1px solid $orange;
-                }
-            }
-
             &_content {}
 
             &_item {
@@ -285,9 +271,20 @@
         color: $text-dark;
         padding: 7px 20px;
         line-height: 1;
+        display: flex;
+        align-items: center;
+        gap: 6px;
+        width: 100%;
+
+        img {
+            width: 9px;
+            height: 9px;
+            object-fit: contain;
+            transform: scale(1.3);
+        }
 
         &:first-child {
-            width: 30%;
+            width: 60%;
             border-right: 1px solid #34312D;
         }
     }
@@ -334,8 +331,8 @@
     }
 
     &__icon {
-        width: 50px;
-        height: 50px;
+        width: 45px;
+        height: 45px;
         object-fit: contain;
     }
 
@@ -346,7 +343,7 @@
     }
 
     &__title {
-        font-size: 20px;
+        font-size: 18px;
         line-height: 1;
     }
 
@@ -354,5 +351,169 @@
         font-size: 12px;
         color: $text-dark;
         line-height: 1;
+    }
+}
+
+.cart-about {
+    margin-top: 20px;
+
+    &__block {
+        display: flex;
+        gap: 20px;
+    }
+
+    &__info {
+        width: 100%;
+        max-width: 403px;
+        border-radius: 10px;
+        background: #1A1917;
+        padding: 10px 10px 30px;
+        display: flex;
+        flex-direction: column;
+        gap: 17px;
+        height: 415px;
+
+        &_title {
+            font-size: 12px;
+            color: white;
+            text-align: center;
+        }
+
+        &_languages {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px 15px;
+            padding: 0 10px;
+            position: relative;
+
+            &_item {
+                display: flex;
+                align-items: center;
+                gap: 6px;
+            }
+
+            &_icon {
+                width: 24px;
+                height: 16px;
+                object-fit: contain;
+            }
+
+            &_text {
+                font-size: 9px;
+                color: $text-dark;
+            }
+        }
+
+        &_age {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            border-radius: 2.557px;
+            border: 0.639px solid #847F7D;
+            font-size: 10px;
+            color: white;
+            padding: 1px 8px;
+        }
+
+        &_modes,
+        &_gamers {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 4px 12px;
+            padding: 0 10px;
+        }
+
+        &_mode,
+        &_gamer {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+
+            &_icon {
+                width: 12px;
+                height: 12px;
+            }
+
+            &_text {
+                font-size: 9px;
+                color: $text-dark;
+            }
+        }
+    }
+
+    &__media {
+        width: 100%;
+        max-width: 827px;
+        border-radius: 10px;
+        background: #1A1917;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        height: 415px;
+
+        &_tabs {
+            display: flex;
+            gap: 8px;
+        }
+
+        &_content {}
+
+        &_tab {
+            display: none;
+
+            &._active {
+                display: flex;
+            }
+        }
+
+        &_content {}
+    }
+}
+
+.cart-tab-btn {
+    font-size: 8.95px;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 3px;
+    border: 1px solid #33302D;
+    background: linear-gradient(142deg, #342D27 0%, #222220 67.95%);
+
+    &:hover,
+    &._active {
+        border: 1px solid $orange;
+    }
+}
+
+.screen-swiper {
+    width: 100%;
+    position: relative;
+
+    .swiper {
+        position: relative;
+        width: 100%;
+        height: 340px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .swiper-slide {
+        display: flex;
+    }
+
+    &__slide {
+        display: flex;
+        border-radius: 3px;
+        overflow: hidden;
+
+        img {
+            object-fit: cover;
+        }
+    }
+
+    .game-slider__arrows {
+        position: absolute;
+        top: -55px;
+        right: 0;
     }
 }
