--- a/src/assets/scss/common/_buttons.scss
+++ b/src/assets/scss/common/_buttons.scss
@@ -39,3 +39,37 @@
         border-color: white;
     }
 }
+
+.cart-tab-btn {
+    font-size: 8.95px;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 3px;
+    border: 1px solid #33302D;
+    background: linear-gradient(142deg, #342D27 0%, #222220 67.95%);
+
+    &:hover,
+    &._active {
+        border: 1px solid $orange;
+    }
+
+    &:focus {
+        outline: none;
+    }
+}
+
+.btn-bordered {
+    font-size: 14px;
+    border: 1px solid $text-dark;
+    color: white;
+    background-color: transparent;
+    border-radius: 4px;
+    padding: 8px 30px;
+    line-height: 1.2;
+    transition: 300ms ease;
+
+    &:hover {
+        border-color: white;
+    }
+
+}
